2005-12-28  Petr Stehlik  <pstehlik@sophics.cz>
* sound_oss.c: handles situations when Pokey generated channels don't match
  the output channels - for example when stereo Pokey is to play on mono only
  card, or vice-versa. Also stereo Pokey compiled in but disabled at runtime
  now plays from both channels (not just the left one).


2005-12-27  Piotr Fusik  <fox@scene.pl>
* DOC/INSTALL.amiga: removed (completely obsolete)

* DOC/TODO: reorganized and added my ideas

* pokey.c: made initialization of poly17_lookup[] about 10 times faster


2005-12-05  Piotr Fusik  <fox@scene.pl>
* atari_ps2.c: sound support for the PS2


2005-11-30  Piotr Skamruk  <jellonek@knip.pol.lublin.pl>
* ui.c: options for enabling/disabling SDL keyboard joysticks


2005-11-26  Piotr Fusik  <fox@scene.pl>
* atari.c: fixed Atari_time() on the PS2

* atari.c: applied patch for *argc==0 (Chris)

* ui_basic.c: minor fix in FileSelector()


2005-11-24  Petr Stehlik  <pstehlik@sophics.cz>
* atari_sdl.c: keyboard joysticks don't pause games anymore. However, a
  runtime switch between keyboard joysticks and normal keyboard is needed.
  DOS/VGA uses <F7>. Will SDL use that or something else? Also some sort
  of visual indication (similar to disk drives lights) is needed otherwise
  users will get confused when half of their keyboard doesn't respond.


2005-11-19  Piotr Fusik  <fox@scene.pl>
* configure.ac, sound_oss.c, sound_unix.c: new OSS sound handling:
  - renamed sound_unix.c to sound_oss.c
  - added "-lossaudio" (necessary on NetBSD)
  - removed some advanced tricks (including "-snddelay" option),
    now writing samples for one Atari frame at once
  - implemented Sound_Pause() using SNDCTL_DSP_POST

* monitor.c: the output of "GTIA" command is now 7 lines instead of 5,
  but is much more readable (sprite registers are aligned)


2005-11-14  Piotr Fusik  <fox@scene.pl>
* configure.ac: R: device disabled by default (use "--enable-riodevice"
  at your own risk)
